# deep-research-open-ai-agent-framework

Deep_research/: .gitignore  agents.py  deep_research.py  email_agent.py  planner_agent.py  pyproject.toml  research_manager.py  search_agent.py  writer_agent.py
