[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "google-generativeai>=0.8.6",
    "openai>=1.59.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sib-api-v3-sdk>=7.6.0",
    "streamlit>=1.52.2",
]
